<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<TextView
    android:layout_height="wrap_content"

    android:layout_width="match_parent"
    android:layout_centerHorizontal="true"
    android:text="@string/alarm_title"
    android:textSize="25dp"
    android:id="@+id/alarm_title"
    />
<View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="@color/blackpink"
    android:layout_below="@id/alarm_title"
    />
      <Spinner
          android:layout_marginTop="50dp"
          android:layout_centerHorizontal="true"
          android:id="@+id/spin_one"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:entries="@array/data"
          android:prompt="@string/spin_selected_title"
          android:spinnerMode="dialog" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tips_1"
        android:layout_below="@id/spin_one"
        android:text="@string/tips_1"
        android:layout_marginTop="20dp"
        android:textSize="18dp"
        />

    <Spinner

        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@id/tips_1"
        android:id="@+id/spin_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog"
        android:entries="@array/data"
        android:prompt="@string/spin_selected_content"
       />
<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/alarm_confirm"
    android:text="@string/confirm"
    android:layout_alignParentEnd="true"
    android:layout_below="@id/spin_two"
    android:layout_marginTop="20dp"
    />
</RelativeLayout>
